--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ jdk:
 env:
  - TEST_DIR=aleph2_data_model
 
-script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
+script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test && mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report
+
