--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -23,6 +23,17 @@
 	        <repoToken>axmT8dFFiJIAh57HiTVGtB8N9lFgjJ7YW</repoToken>
 	    </configuration>
       </plugin>
+      <plugin>
+      	<groupId>org.codehaus.mojo</groupId>
+      	<artifactId>cobertura-maven-plugin</artifactId>
+      	<version>2.6</version>
+	    <configuration>
+	        <format>xml</format>
+	        <maxmem>256m</maxmem>
+	        <!-- aggregated reports for multi-module projects -->
+	        <aggregate>true</aggregate>
+	    </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
