Continuing very basic "pre-plumbing" for aleph2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ env:
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
 after_success:
- - cd $TEST_DIR && mvn clean cobertura:cobertura coveralls:report
+ - mvn clean cobertura:cobertura coveralls:report
 
