--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ env:
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
 after_success:
- - mvn clean cobertura:cobertura coveralls:report
+ - mvn clean test jacoco:report coveralls:report
 
