--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -89,5 +89,15 @@
   		<artifactId>checker-qual</artifactId>
   		<version>1.8.11</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-core</artifactId>
+  		<version>2.5.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.guava</groupId>
+  		<artifactId>guava</artifactId>
+  		<version>18.0</version>
+  	</dependency>
   </dependencies>
 </project>
