Added some more template projects and also filled in more beans based on the inital design

--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -73,6 +73,13 @@
     </pluginManagement>
   </build>
   <dependencies>
+	<dependency>
+	    <groupId>jdk.tools</groupId>
+	    <artifactId>jdk.tools</artifactId>
+	    <version>${java.version}</version>
+	    <scope>system</scope>
+	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
