--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -42,5 +42,10 @@
   		<artifactId>hadoop-mapreduce-client-core</artifactId>
   		<version>2.5.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>3.0</version>
+  	</dependency>
   </dependencies>
 </project>
