--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -100,7 +100,12 @@
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-core</artifactId>
   		<version>2.5.2</version>
-  	</dependency>
+ 	</dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.5.2</version>
+    </dependency>
   	<dependency>
   		<groupId>com.google.guava</groupId>
   		<artifactId>guava</artifactId>
