--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -47,5 +47,15 @@
   		<artifactId>guice</artifactId>
   		<version>3.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.kafka</groupId>
+  		<artifactId>kafka_2.10</artifactId>
+  		<version>0.8.2.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.hadoop</groupId>
+  		<artifactId>hadoop-client</artifactId>
+  		<version>2.5.2</version>
+  	</dependency>
   </dependencies>
 </project>
