--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -57,5 +57,10 @@
   		<artifactId>hadoop-client</artifactId>
   		<version>2.5.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_data_model</artifactId>
+  		<version>[0.0,)</version>
+  	</dependency>
   </dependencies>
 </project>
