--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>aleph2_data_model</groupId>
+  <groupId>com.ikanow.aleph2</groupId>
   <artifactId>aleph2_data_model</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
