--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -111,5 +111,10 @@
   		<artifactId>guava</artifactId>
   		<version>18.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.scala-lang</groupId>
+  		<artifactId>scala-library</artifactId>
+  		<version>2.9.0</version>
+  	</dependency>
   </dependencies>
 </project>
