--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -115,6 +115,11 @@
   		<groupId>org.scala-lang</groupId>
   		<artifactId>scala-library</artifactId>
   		<version>2.9.0</version>
-  	</dependency>
+  	</dependency>  	
+  	<dependency>
+		<groupId>com.google.inject</groupId>
+		<artifactId>guice</artifactId>
+		<version>3.0</version>
+	</dependency>
   </dependencies>
 </project>
