--- a/aleph2_access_manager/config.properties
+++ b/aleph2_access_manager/config.properties
@@ -1,5 +1,5 @@
 #data service needs name, full path to overriding interface (if exists), full path to new service
-data_service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared.ISecurityService
+data_service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 data_service.SecurityService.service=com.ikanow.aleph2.security_service.SecurityService
 
 data_service.SampleCustomService.service=com.ikanow.aleph2.access_manager.data_access.SampleCustomService
