--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -121,5 +121,11 @@
 		<artifactId>guice</artifactId>
 		<version>3.0</version>
 	</dependency>
+	<dependency>
+		<groupId>com.typesafe</groupId>
+		<artifactId>config</artifactId>
+		<version>1.2.1</version>
+	</dependency>
+	
   </dependencies>
 </project>
