--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -116,5 +116,11 @@
   		<artifactId>scala-library</artifactId>
   		<version>2.9.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.mongodb</groupId>
+  		<artifactId>mongo-java-driver</artifactId>
+  		<version>2.13.1</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
