--- a/aleph2_data_model/resources/reference.conf
+++ b/aleph2_data_model/resources/reference.conf
@@ -14,7 +14,7 @@ access_manager.service=x
 #to override an existing service put the interface to override and the service to use
 #to add a custom service, just put the service to use
 #these data services can be accessed by calling AccessDriver.getAccessContext(); and requesting the service by the
-#name you give them
+#class name of the service you want (e.g. ISecurityService.class)
 
 #override the security service
 #data_service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
