--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -122,5 +122,15 @@
   		<version>2.13.1</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>3.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject.extensions</groupId>
+  		<artifactId>guice-assistedinject</artifactId>
+  		<version>3.0</version>
+  	</dependency>
   </dependencies>
 </project>
