--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 after_success:
  - mvn clean test jacoco:report coveralls:report
 
+# blacklist
+branches:
+  except:
+    - aleph4_data_import_manager
+
