--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -132,5 +132,11 @@
   		<artifactId>guice-assistedinject</artifactId>
   		<version>3.0</version>
   	</dependency>
+  	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+  	
   </dependencies>
 </project>
