--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -138,5 +138,10 @@
   		<version>2.1.0</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.metamodel</groupId>
+  		<artifactId>MetaModel-core</artifactId>
+  		<version>4.3.3</version>
+  	</dependency>
   </dependencies>
 </project>
