--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -148,5 +148,10 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.17</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-beanutils</groupId>
+		<artifactId>commons-beanutils</artifactId>
+		<version>1.9.2</version>
+	</dependency>	
   </dependencies>
 </project>
