--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -174,5 +174,10 @@
 		<artifactId>commons-beanutils</artifactId>
 		<version>1.9.2</version>
 	</dependency>	
+  	<dependency>
+  		<groupId>org.apache.curator</groupId>
+  		<artifactId>curator-framework</artifactId>
+  		<version>2.7.1</version>
+  	</dependency>
   </dependencies>
 </project>
