ALEPH-3 #comment unification merge

--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -47,6 +47,11 @@
   		<version>[0.0,)</version>
   	</dependency>
   	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_core_distributed_services_library</artifactId>
+  		<version>[0.0,)</version>
+  	</dependency>
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
