--- a/aleph2_access_manager/pom.xml
+++ b/aleph2_access_manager/pom.xml
@@ -30,5 +30,11 @@
   		<artifactId>aleph2_data_model</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
