--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>aleph2_core_distributed_services_library</groupId>
+  <groupId>com.ikanow.aleph2</groupId>
   <artifactId>aleph2_core_distributed_services_library</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
@@ -21,6 +21,11 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
   		<version>[0.0,)</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.curator</groupId>
+  		<artifactId>curator-test</artifactId>
+  		<version>2.7.1</version>
   	</dependency>
   </dependencies>
 </project>
