--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -179,5 +179,10 @@
   		<artifactId>curator-framework</artifactId>
   		<version>2.7.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.eaio.uuid</groupId>
+  		<artifactId>uuid</artifactId>
+  		<version>3.2</version>
+  	</dependency>
   </dependencies>
 </project>
