--- a/aleph2_data_import_manager/src/application.conf
+++ b/aleph2_data_import_manager/src/application.conf
@@ -1,4 +1,6 @@
-service.ICoreDistributedServices.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ICoreDistributedServices
-service.ICoreDistributedServices.service=com.ikanow.aleph2.management_db.services.CoreDistributedServices
-service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
-service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.HDFSStorageService
+#service.CoreDistributedServices.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ICoreDistributedServices
+#service.CoreDistributedServices.service=com.ikanow.aleph2.management_db.services.CoreDistributedServices
+#service.StorageIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
+#service.StorageIndexService.service=com.ikanow.aleph2.storage_service_hdfs.services.HDFSStorageService
+#service.DataImportManager.service=com.ikanow.aleph2.data_import_manager.services.DataImportManager
+service.something.service=com.ikanow.aleph2.data_import_manager.services.DataImportManager
