--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -28,10 +28,20 @@
   		<version>2.7.1</version>
   	</dependency>
   	<dependency>
+  		<groupId>com.typesafe.akka</groupId>
+  		<artifactId>akka-actor_2.11</artifactId>
+  		<version>2.3.10</version>
+  	</dependency>
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.kafka</groupId>
+  		<artifactId>kafka_2.10</artifactId>
+  		<version>0.8.2.1</version>
   	</dependency>
   </dependencies>
 </project>
