--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ jdk:
  - oraclejdk8
 
 env:
- - TEST_DIR=aleph2_data_model
+ - HOME_DIR=$(pwd)
+ - TEST_DIR=$HOME_DIR/aleph2_data_model
 
 before_install:
- - cd aleph2_data_model && mvn install -DskipTests=true && cd ../test_dependencies/aleph2_crud_service_mongodb && mvn install -DskipTests=true
+ - cd $HOME_DIR/aleph2_data_model && mvn install -DskipTests=true && cd $HOME_DIR/test_dependencies/aleph2_crud_service_mongodb && mvn install -DskipTests=true
 
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
