--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -97,6 +97,11 @@
 		<version>1.10.19</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.xeustechnologies</groupId>
+		<artifactId>jcl-core</artifactId>
+		<version>2.4</version>
+	</dependency>
   </dependencies>
   
 </project>
