--- a/aleph2_data_import_manager/.classpath
+++ b/aleph2_data_import_manager/.classpath
@@ -17,12 +17,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_data_model"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_crud_service_mongodb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_management_db_service_mongodb"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
