--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -52,6 +52,12 @@
   		<version>[0.0,)</version>
   	</dependency>
   	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_crud_service_mongodb</artifactId>
+  		<version>[0.0,)</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
@@ -71,6 +77,11 @@
 		<groupId>com.google.inject</groupId>
 		<artifactId>guice</artifactId>
 		<version>3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>4.1.6.RELEASE</version>
 	</dependency>
   </dependencies>
 </project>
