--- a/aleph2_data_import_manager/.classpath
+++ b/aleph2_data_import_manager/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_crud_service_mongodb"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_management_db_service_mongodb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_storage_service_hdfs"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
