--- a/aleph2_data_import_manager/example_config_files/harvest_local_test.properties
+++ b/aleph2_data_import_manager/example_config_files/harvest_local_test.properties
@@ -5,6 +5,8 @@ service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_se
 service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.MockHdfsStorageService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MongoDbManagementDbService
+service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
+service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 # CONFIG
 # GLOBALS:
 globals.local_cached_jar_dir=file://temp/
