ALEPH-19 #comment Lots of tweaks in support of writing some "delete bucket" actions, should get more straightforward from here!

--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -186,5 +186,13 @@
   		<artifactId>uuid</artifactId>
   		<version>3.2</version>
   	</dependency>
+  	<!-- 
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_crud_service_mongodb</artifactId>
+  		<version>[0.0,)</version>
+  		<scope>test</scope>
+  	</dependency>
+  	 -->
   </dependencies>
 </project>
