--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -57,6 +57,12 @@
   		<version>[0.0,)</version>
   		<scope>test</scope>
   	</dependency>
+   	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_storage_service_hdfs</artifactId>
+  		<version>[0.0,)</version>
+	    <scope>test</scope>
+  	</dependency>  	
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service_mongodb</artifactId>
@@ -83,6 +89,11 @@
 		<groupId>com.google.inject</groupId>
 		<artifactId>guice</artifactId>
 		<version>3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-hdfs</artifactId>
+		<version>2.5.2</version>
 	</dependency>
   </dependencies>
 </project>
