--- a/aleph2_harvest_context_library/pom.xml
+++ b/aleph2_harvest_context_library/pom.xml
@@ -32,6 +32,24 @@
   		<artifactId>aleph2_management_db_service</artifactId>
   		<version>[0.0,)</version>
   	</dependency>
+   	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_storage_service_hdfs</artifactId>
+  		<version>[0.0,)</version>
+	    <scope>test</scope>
+  	</dependency>  	
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_management_db_service_mongodb</artifactId>
+  		<version>[0.0,)</version>
+	    <scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
 	<dependency>
 	    <groupId>jdk.tools</groupId>
 	    <artifactId>jdk.tools</artifactId>
