--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -49,6 +49,11 @@
   		<artifactId>aleph2_management_db_service</artifactId>
   		<version>[0.0,)</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_harvest_context_library</artifactId>
+  		<version>[0.0,)</version>
+  	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
