--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
@@ -12,3 +12,4 @@ service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services
 #(insert these by hand)
 globals.local_root_dir=TEST_IS_OVERRIDDEN
 # MANAGEMENT DB:
+MockMongoDbCrudServiceFactory.one_per_thread=false
