--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -2,7 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ikanow.aleph2</groupId>
   <artifactId>aleph2_core_distributed_services_library</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>${aleph2.version}</version>
+  <properties>
+       <aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+  </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -20,7 +23,7 @@
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.curator</groupId>
