--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -2,7 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ikanow.aleph2</groupId>
   <artifactId>aleph2_management_db_service</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>${aleph2.version}</version>
+  <properties>
+	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+  </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
@@ -44,29 +47,29 @@
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_core_distributed_services_library</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_crud_service_mongodb</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   		<scope>test</scope>
   	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
 	    <scope>test</scope>
   	</dependency>  	
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service_mongodb</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
