--- a/aleph2_test_data_services/pom.xml
+++ b/aleph2_test_data_services/pom.xml
@@ -2,22 +2,25 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>aleph2_test_data_services</groupId>
   <artifactId>aleph2_test_data_services</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>${aleph2.version}</version>
+  <properties>
+	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+  </properties>
   <dependencies>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
-  		<groupId>aleph2_access_manager</groupId>
+  		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_access_manager</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
-  		<groupId>aleph2_security_service_ikanow_v1</groupId>
+  		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_security_service_ikanow_v1</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   </dependencies>
 </project>
