--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -40,28 +40,28 @@
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_core_distributed_services_library</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_harvest_context_library</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
   	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
-  		<version>[0.0,)</version>
-	    <scope>test</scope>
+  		<version>${aleph2.version}</version>
+	    <!--  <scope>test</scope> -->
   	</dependency>  	
 	<dependency>
 	    <groupId>jdk.tools</groupId>
