--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -64,7 +64,7 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
   		<version>${aleph2.version}</version>
-	    <scope>test</scope>
+	    <!--  <scope>test</scope> -->
   	</dependency>  	
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
@@ -96,6 +96,11 @@
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-hdfs</artifactId>
+		<version>2.5.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-common</artifactId>
 		<version>2.5.2</version>
 	</dependency>
   </dependencies>
