--- a/aleph2_parent/pom.xml
+++ b/aleph2_parent/pom.xml
@@ -9,16 +9,15 @@
         <aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
     </properties>
     <modules>
+        <module>../aleph2_data_model</module>
+        <module>../aleph2_object_import_library</module>
         <module>../aleph2_access_manager</module>
         <module>../aleph2_core_distributed_services_library</module>
         <module>../aleph2_data_analytics_manager</module>
         <module>../aleph2_data_import_manager</module>
-        <module>../aleph2_data_model</module>
         <module>../aleph2_harvest_context_library</module>
         <module>../aleph2_management_db_service</module>
-        <module>../aleph2_object_import_library</module>
-        <module>../aleph2_test_data_services</module>
-
+<!--        <module>../aleph2_test_data_services</module> -->
     </modules>
 
     <build>
@@ -32,6 +31,29 @@
                         <target>1.8</target>
                     </configuration>
                 </plugin>
+				<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.4</version>
+				<configuration>
+				  <descriptorRefs>
+				    <descriptorRef>jar-with-dependencies</descriptorRef>
+				  </descriptorRefs>
+
+<!--				<descriptors>
+                  <descriptor>src/assembly/src.xml</descriptor>
+                </descriptors>
+-->
+				</configuration>
+				<executions>
+				  <execution>
+				    <id>make-assembly</id> <!-- this is used for inheritance merges -->
+				    <phase>package</phase> <!-- bind to the packaging phase -->
+				    <goals>
+				      <goal>single</goal>
+				    </goals>
+				  </execution>
+				</executions>
+			  </plugin>
             </plugins>
         </pluginManagement>
     </build>
