--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -64,7 +64,7 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
   		<version>${aleph2.version}</version>
-	    <!--  <scope>test</scope> -->
+	    <scope>test</scope>
   	</dependency>  	
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
