--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -111,6 +111,13 @@
 		<artifactId>jcl-core</artifactId>
 		<version>2.4</version>
 	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
+	
   </dependencies>
   
 </project>
