--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
  - TEST_DIR=aleph2_data_model
 
 before_install:
- - cd aleph2_data_model && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
+ - cd test_dependencies && git pull origin master && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
 
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
