--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -46,5 +46,10 @@
   		<artifactId>kafka_2.10</artifactId>
   		<version>0.8.2.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.curator</groupId>
+  		<artifactId>curator-recipes</artifactId>
+  		<version>2.8.0</version>
+  	</dependency>
   </dependencies>
 </project>
