Added 2 new projects to the test suite

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ jdk:
 env:
  - TEST_DIR=aleph2_data_model
  - TEST_DIR=aleph2_management_db_service
+ - TEST_DIR=aleph2_core_distributed_services_library
 
 before_install:
  - cd test_dependencies && git pull origin master && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../aleph2_core_distributed_services_library && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
