--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>aleph2_data_import_manager</artifactId>
   <version>${aleph2.version}</version>
   <properties>
+	<aleph2.scope>compile</aleph2.scope>
 	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
   </properties>
   <build>
@@ -58,6 +59,24 @@
 			</execution>
 		</executions>
 	  </plugin>    
+            
+		 <!-- In order to prevent other aleph2 projects to be included, execute using: mvn -e clean package -Dmaven.test.skip=true -Daleph2.scope=provided  -->
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>2.3</version>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>shade</goal>
+	            </goals>
+				<configuration>
+		          <shadedArtifactAttached>true</shadedArtifactAttached>
+	            </configuration>
+	          </execution>
+	        </executions>
+	      </plugin>
     </plugins>
     <pluginManagement>
     	<plugins>
@@ -98,27 +117,31 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
   		<version>${aleph2.version}</version>
-  	</dependency>
+		<scope>${aleph2.scope}</scope>
+	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_core_distributed_services_library</artifactId>
   		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service</artifactId>
   		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_harvest_context_library</artifactId>
   		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
   	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
   		<version>${aleph2.version}</version>
-	    <scope>test</scope>
+		<scope>test</scope>
   	</dependency>  	
 	<dependency>
 	    <groupId>jdk.tools</groupId>
