--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -41,7 +41,25 @@
 				</goals>
 			</execution>
 		</executions>
-	  </plugin>    
+	  </plugin>
+	      <plugin>
+	      	<!--  execute using: mvn -e clean package shade:shade -Dmaven.test.skip=true -->
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>2.3</version>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>shade</goal>
+	            </goals>
+				<configuration>
+		          <shadedArtifactAttached>true</shadedArtifactAttached>
+		        </configuration>
+	          </execution>
+	        </executions>
+	      </plugin>
+    
 	</plugins>
     <pluginManagement>
     	<plugins>
@@ -73,7 +91,7 @@
     					</pluginExecutions>
     				</lifecycleMappingMetadata>
     			</configuration>
-    		</plugin>
+    		</plugin>    		
     	</plugins>
     </pluginManagement>
   </build>
