--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -4,7 +4,8 @@
   <artifactId>aleph2_core_distributed_services_library</artifactId>
   <version>${aleph2.version}</version>
   <properties>
-       <aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+  	<aleph2.scope>compile</aleph2.scope>
+    <aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -40,7 +41,24 @@
 				</goals>
 			</execution>
 		</executions>
-	  </plugin>    
+	  </plugin>  
+		 <!-- In order to prevent other aleph2 projects to be included, execute using: mvn -e clean package -Dmaven.test.skip=true -Daleph2.scope=provided  -->
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>2.3</version>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>shade</goal>
+	            </goals>
+				<configuration>
+		          <shadedArtifactAttached>true</shadedArtifactAttached>
+	            </configuration>
+	          </execution>
+	        </executions>
+	      </plugin>      	    
 	</plugins>
     <pluginManagement>
     	<plugins>
@@ -81,6 +99,7 @@
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
   		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>  		
   	</dependency>
   	<dependency>
   		<groupId>org.apache.curator</groupId>
