--- a/aleph2_harvest_context_library/pom.xml
+++ b/aleph2_harvest_context_library/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>aleph2_harvest_context_library</artifactId>
   <version>${aleph2.version}</version>
   <properties>
+	<aleph2.scope>compile</aleph2.scope>
 	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
   </properties>
   <build>
@@ -40,7 +41,24 @@
 				</goals>
 			</execution>
 		</executions>
-	  </plugin>    
+	  </plugin>
+		 <!-- In order to prevent other aleph2 projects to be included, execute using: mvn -e clean package -Dmaven.test.skip=true -Daleph2.scope=provided  -->
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>2.3</version>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>shade</goal>
+	            </goals>
+				<configuration>
+		          <shadedArtifactAttached>true</shadedArtifactAttached>
+	            </configuration>
+	          </execution>
+	        </executions>
+	      </plugin>	   
 	</plugins>
     <pluginManagement>
     	<plugins>
@@ -80,28 +98,31 @@
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_data_model</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>  		
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_core_distributed_services_library</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>  		
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>  		
   	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_storage_service_hdfs</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
 	    <scope>test</scope>
   	</dependency>  	
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service_mongodb</artifactId>
-  		<version>[0.0,)</version>
+  		<version>${aleph2.version}</version>
 	    <scope>test</scope>
   	</dependency>
   	<dependency>
