ALEPH-19 #comment Working version of the v1 harvest sync, not comprehensively tested yet (mainly shared library code, which is also the simplest)

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
@@ -12,4 +12,5 @@ service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services
 MongoDbManagementDbService.mongodb_connection=localhost:4017
 MongoDbManagementDbService.v1_enabled=true
 #Globals:
-
+globals.local_cached_jar_dir=C:\\opt\\aleph2-home\\cached-jars\\
+#globals.local_cached_jar_dir=C:\\Users\\$USERNAME\\AppData\\Local\\Temp\\
