ALEPH-19 Some tweaks to test code following recent interface changes

--- a/aleph2_data_import_manager/test/test_data_import_manager.properties
+++ b/aleph2_data_import_manager/test/test_data_import_manager.properties
@@ -3,10 +3,10 @@ service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services
 service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.MockCoreDistributedServices
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
 service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.MockHdfsStorageService
-#service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
-#service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
-#service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
-#service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
+service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
+service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
+service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
