--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
@@ -3,6 +3,8 @@ service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services
 service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.MockCoreDistributedServices
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
 service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.MockHdfsStorageService
+service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
