ALEPH-10 More streaming enrichment context testing (+some ES config fixes)

--- a/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
@@ -9,6 +9,7 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
 service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
+#service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
 #?CUSTOM:
 service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
@@ -18,3 +19,5 @@ service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoD
 globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
+# Full Search index service if enabled
+#ElasticsearchCrudService.elasticsearch_connection=localhost:4093
