--- a/aleph2_streaming_enrichment_context_library/pom.xml
+++ b/aleph2_streaming_enrichment_context_library/pom.xml
@@ -49,7 +49,9 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.2.201409121644</version>
 				<configuration>
-					<exclude>**/data_model/**</exclude>
+					<excludes>
+						<exclude>**backtype.storm**</exclude>
+					</excludes>
 				</configuration>
 				<executions>
 					<execution>
