ALEPH-10 Integrated streaming enrichment into v1 sync service

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
@@ -4,7 +4,7 @@ service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.s
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
 service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.MockHdfsStorageService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
-service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MongoDbManagementDbService
+service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 # CONFIG
@@ -14,3 +14,8 @@ MongoDbManagementDbService.v1_enabled=true
 #Globals:
 globals.local_cached_jar_dir=C:\\opt\\aleph2-home\\cached-jars\\
 #globals.local_cached_jar_dir=C:\\Users\\$USERNAME\\AppData\\Local\\Temp\\
+# DATA IMPORT LAYER:
+DataImportManager.v1_sync_service_enabled=true
+DataImportManager.streaming_enrichment_enabled=true
+DataImportManager.batch_enrichment_enabled=false
+DataImportManager.storm_debug_mode=true
