--- a/aleph2_data_import_manager/.classpath
+++ b/aleph2_data_import_manager/.classpath
@@ -23,5 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/aleph2_management_db_service_mongodb"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
