--- a/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
@@ -7,9 +7,16 @@ service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.da
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
 # CONFIG
 # MANAGEMENT DB:
 MongoDbManagementDbService.mongodb_connection=localhost:27017
 MongoDbManagementDbService.v1_enabled=true
-
+# SEARCH INDEX
+ElasticsearchCrudService.elasticsearch_connection=localhost:9300
+# DATA IMPORT LAYER:
+DataImportManager.v1_sync_service_enabled=true
+DataImportManager.streaming_enrichment_enabled=true
+DataImportManager.batch_enrichment_enabled=false
 
