ALEPH-10 Fixed incorrectly named data import manager config param

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
@@ -7,6 +7,8 @@ service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.da
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
 # CONFIG
 # MANAGEMENT DB:
 MongoDbManagementDbService.mongodb_connection=localhost:4017
@@ -14,8 +16,8 @@ MongoDbManagementDbService.v1_enabled=true
 #Globals:
 globals.local_cached_jar_dir=C:\\opt\\aleph2-home\\cached-jars\\
 #globals.local_cached_jar_dir=C:\\Users\\$USERNAME\\AppData\\Local\\Temp\\
-# DATA IMPORT LAYER:
-DataImportManager.v1_sync_service_enabled=true
+# DATA IMPORT MANAGER:
+DataImportManager.harvest_enabled=true
 DataImportManager.streaming_enrichment_enabled=true
 DataImportManager.batch_enrichment_enabled=false
 DataImportManager.storm_debug_mode=true
