--- a/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
@@ -16,7 +16,7 @@ MongoDbManagementDbService.v1_enabled=true
 # SEARCH INDEX
 ElasticsearchCrudService.elasticsearch_connection=localhost:9300
 # DATA IMPORT LAYER:
-DataImportManager.v1_sync_service_enabled=true
+DataImportManager.harvest_enabled=true
 DataImportManager.streaming_enrichment_enabled=true
 DataImportManager.batch_enrichment_enabled=false
 
